@@ -1,3 +1,11 @@
+2007-01-08  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/script-fu/scripts/difference-clouds.scm: removed wrong
+	and useless call to gimp-drawable-update.
+
+	* plug-ins/script-fu/scripts/drop-shadow.scm: removed hyphen from
+	menu entry and description.
+
 2007-01-08  Marco Ciampa  <ciampix@libero.it>
 
 	* configure.in: Added 'eo' (Esperanto) to ALL_LINGUAS
